test/fail/property-ref-type.app
//Cannot use Reference type as type in property


application test

entity Test {

	test -> Ref<Test>
	
}

define page root() { }
